Fix image alignment in popup

--- a/memory-game.css
+++ b/memory-game.css
@@ -218,6 +218,7 @@
 }
 .h5p-memory-game .h5p-memory-image {
   display: inline-block;
+  line-height: 6;
   position: relative;
   top: 1.5em;
   left: -0.5em;
